--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",                 // For local development
+    "build": "vite build",         // For building the production version
+    "serve": "vite preview",       // For previewing the production build
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "vite": "^4.0.0"
+  },
+  "devDependencies": {
+    "vite-plugin-react": "^1.0.0"
   },
   "keywords": [],
   "author": "",
