--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "kingdom-strategy-game",
+  "name": "blood-and-valor",
   "version": "1.0.0",
+  "description": "\"Frontend for Blood & Valor Kingdom Strategy Game\"",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MattieMetzax/BloodAndValor.git"
   },
-  "devDependencies": {
-    "vite": "^4.0.0",
-    "vite-plugin-react": "^1.0.0"
-  }
+  "keywords": [
+    "strategy",
+    "game",
+    "frontend"
+  ],
+  "author": "Mattie Sojcik",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MattieMetzax/BloodAndValor/issues"
+  },
+  "homepage": "https://github.com/MattieMetzax/BloodAndValor#readme"
 }
