--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",     // This script is required for production builds
+    "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
